--- a/src/pages/areas/pasadena.astro
+++ b/src/pages/areas/pasadena.astro
@@ -309,7 +309,7 @@ import "css/service-areas/style-service-areas.css";
         </div>
       </div>
 
-      <h2>Common Appliance Issues in Pasadena Homes</h2>
+      <h2>Common Appliance Issues in Pasadena Home</h2>
       <p>
         In Pasadena, it is not uncommon for residents to experience problems
         with their Home appliances. Some of the most frequent issues include
