--- a/src/pages/price-list/air-duct-cleaning-cost.astro
+++ b/src/pages/price-list/air-duct-cleaning-cost.astro
@@ -423,10 +423,10 @@ import "css/price/style_price.css";
             <li>
               <b>Contamination Level: </b>The presence of dirt, debris, pet
               hair, and other contaminants can make the cleaning process more
-              labor-intensive. Homes with high levels of contamination,
-              including visible mold in the ducts or a clogged dryer vent, may
-              incur higher cleaning costs due to the additional work and
-              specialized equipment needed.
+              labor-intensive. Home with high levels of contamination, including
+              visible mold in the ducts or a clogged dryer vent, may incur
+              higher cleaning costs due to the additional work and specialized
+              equipment needed.
             </li>
             <li>
               <b>Accessibility of the HVAC System: </b>If the air duct system is
