--- a/src/pages/price-list/microwave-repair-cost.astro
+++ b/src/pages/price-list/microwave-repair-cost.astro
@@ -1533,10 +1533,10 @@ import "css/price/style_price.css";
           affordable and accessible, boasting a lower average cost compared to
           their built-in counterparts. Although they do take up valuable counter
           space, their budget-friendly nature makes them a popular choice for
-          many Homes. Whether you prefer the built-in elegance or the
-          convenience of a countertop model, we're equipped to handle repairs
-          for both types, ensuring your microwave is back to optimal
-          functionality in no time.
+          many Home. Whether you prefer the built-in elegance or the convenience
+          of a countertop model, we're equipped to handle repairs for both
+          types, ensuring your microwave is back to optimal functionality in no
+          time.
         </p>
       </div>
 
