--- a/src/pages/services/bar-refrigerator-repair-los-angeles.astro
+++ b/src/pages/services/bar-refrigerator-repair-los-angeles.astro
@@ -739,7 +739,7 @@ import "css/service/style_services.css";
 
               <h3>GE (General Electric)</h3>
               <p>
-                GE appliances are also a staple in many Homes, known for their
+                GE appliances are also a staple in many Home, known for their
                 advanced features and robust performance. Repairing a GE bar
                 refrigerator can be slightly more expensive due to the
                 specialized parts and technology involved. Common issues might
@@ -820,7 +820,7 @@ import "css/service/style_services.css";
                 issues might include problems with the thermostat, evaporator fan
                 motor, or condenser coils. The widespread availability of Kenmore
                 parts and technicians helps keep repair costs reasonable, making
-                it a popular choice for many Homes.
+                it a popular choice for many Home.
               </p>
 
               <p>
