--- a/src/pages/services/dryer-repair-los-angeles.astro
+++ b/src/pages/services/dryer-repair-los-angeles.astro
@@ -622,15 +622,15 @@ import "css/service/style_services.css";
 
               <h3>GE</h3>
               <p>
-                GE dryers are a staple in many Homes due to their performance
-                and durability. Repair costs for GE dryers typically fall
-                between <b>$100 and $400</b>. Frequent repairs often involve the
-                heating element, control board, or drum bearings. GE has a wide
-                array of service centers and authorized technicians, making it
-                relatively easier to get your dryer repaired. Although you might
-                find cheaper parts from third-party vendors, using OEM parts can
-                help maintain the dryer’s performance and reliability over the
-                long term.
+                GE dryers are a staple in many Home due to their performance and
+                durability. Repair costs for GE dryers typically fall between <b
+                  >$100 and $400</b
+                >. Frequent repairs often involve the heating element, control
+                board, or drum bearings. GE has a wide array of service centers
+                and authorized technicians, making it relatively easier to get
+                your dryer repaired. Although you might find cheaper parts from
+                third-party vendors, using OEM parts can help maintain the
+                dryer’s performance and reliability over the long term.
               </p>
 
               <h3>Bosch</h3>
