--- a/src/pages/services/freezer-repair-los-angeles.astro
+++ b/src/pages/services/freezer-repair-los-angeles.astro
@@ -222,8 +222,8 @@ import "css/service/style_services.css";
             <div class="content__page-desc">
               <h3>Upright Freezers</h3>
               <p>
-                Upright freezers are a popular choice for Homes that require
-                easy access to frozen goods without taking up much floor space.
+                Upright freezers are a popular choice for Home that require easy
+                access to frozen goods without taking up much floor space.
                 However, their vertical design can sometimes lead to specific
                 repair needs. Common issues include faulty door seals, which can
                 cause frost buildup and reduced efficiency, and malfunctioning
