--- a/src/pages/services/microwave-repair-los-angeles.astro
+++ b/src/pages/services/microwave-repair-los-angeles.astro
@@ -1449,7 +1449,7 @@ import "css/service/style_services.css";
               <h3>Frequency of Professional Maintenance:</h3>
               <ul>
                 <li>
-                  <b>Annual Check-Up: </b>For most Homes, an annual professional
+                  <b>Annual Check-Up: </b>For most Home, an annual professional
                   maintenance check is typically sufficient.
                 </li>
                 <li>
