--- a/src/pages/services/oven-repair-los-angeles.astro
+++ b/src/pages/services/oven-repair-los-angeles.astro
@@ -903,7 +903,7 @@ import "css/service/style_services.css";
             <div class="content__page-desc">
               <h3>LG Ovens</h3>
               <p>
-                LG ovens are another popular choice for many Homes, known for
+                LG ovens are another popular choice for many Home, known for
                 their reliability and modern features. The average cost to
                 repair an LG oven is between <b>$200 and $450</b>. Common issues
                 might include a malfunctioning oven's circuit breaker, aluminum
