--- a/src/pages/services/refrigerator-repair-los-angeles.astro
+++ b/src/pages/services/refrigerator-repair-los-angeles.astro
@@ -724,7 +724,7 @@ import "css/service/style_services.css";
                 between <b>$400 and $700</b>. The availability of parts and the
                 widespread presence of GE-certified technicians can help keep
                 repair costs reasonable and turnaround times quick, making GE a
-                practical choice for many Homes.
+                practical choice for many Home.
               </p>
 
               <h3>Maytag</h3>
