--- a/src/pages/services/stove-repair-los-angeles.astro
+++ b/src/pages/services/stove-repair-los-angeles.astro
@@ -925,7 +925,7 @@ import "css/service/style_services.css";
                 The cost to repair a Frigidaire stove generally falls between
                 $100 and $400. Frigidaire is known for its reliable and
                 budget-friendly appliances, making them a popular choice for
-                many Homes. Common repair issues include replacing oven
+                many Home. Common repair issues include replacing oven
                 thermostats, fixing burner elements, and repairing control
                 knobs. Frigidaire parts are widely available and usually
                 affordable, which helps keep repair costs on the lower end.
