--- a/src/css/style-index.css
+++ b/src/css/style-index.css
@@ -61,6 +61,49 @@ h2 {
     font-weight: 900;
 }
 
+.two-col-grid {
+    padding: 2% 3% 2% 3%;
+    display: block;
+}
+
+.col-one {
+    float: left;
+    margin: 0 20px 0px 0;
+}
+
+.col-one img {
+    max-width: 100%;
+    box-shadow: 0px 3px 5px 2px rgb(0 0 0 / 20%), 3px 2px 3px 0px rgb(0 0 0 / 14%), 3px 3px 14px 0px rgb(0 0 0 / 12%);
+    border-radius: 10px;
+}
+
+.full-contact-button-global {
+    margin-top: 24px;
+}
+
+.col-two p {
+    color: #000;
+    font-weight: 400;
+    font-size: clamp(16px, 3vw, 18px);
+    margin-bottom: 8px;
+}
+
+.faq-price-list {
+    margin-bottom: 2%;
+}
+
+
+
+
+
+
+
+
+
+.category-0 {
+    display: inline-block;
+}
+
 .full-commercial-machinery {
     background-color: #F2F1F0;
     width: 100%;
@@ -127,6 +170,88 @@ h2 {
 
 
 
+/* 
+
+#full-commercial-machinery-nocolor::before {
+    content: '';
+    display: block;
+    height: 115px;
+    margin-top: -115px;
+    z-index: -100;
+  }
+  
+  #parts-cost-anchor::before {
+    content: '';
+    display: block;
+    height: 115px;
+    margin-top: -115px;
+    z-index: -100;
+  }
+  
+  #faqs-anchor::before {
+    content: '';
+    display: block;
+    height: 65px;
+    margin-top: -65px;
+    z-index: -100;
+  } */
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width:1024px) {
+    .two-col-grid {
+        display: grid;
+    }
+
+    .col-one {
+        float: none;
+        grid-row: 2/2;
+        justify-self: center;
+        margin: 15px 10px 0px 10px;
+    }
+    .col-two {
+        grid-column: 1;
+    }
+
+    /* #full-commercial-machinery-nocolor::before {
+        content: '';
+        display: block;
+        height: 70px;
+        margin-top: -70px;
+      }
+    
+      #parts-cost-anchor::before {
+        content: '';
+        display: block;
+        height: 70px;
+        margin-top: -70px;
+      }
+    
+      #faqs-anchor::before {
+        content: '';
+        display: block;
+        height: 40px;
+        margin-top: -40px;
+      } */
+    
+}
+
+
+
+
+
 
 
 
@@ -144,6 +269,29 @@ h2 {
     .finish-index {
         padding: 1% 3%;
     }
+
+
+    /* #full-commercial-machinery-nocolor::before {
+        content: '';
+        display: block;
+        height: 55px;
+        margin-top: -55px;
+      }
+    
+      #parts-cost-anchor::before {
+        content: '';
+        display: block;
+        height: 55px;
+        margin-top: -55px;
+      }
+    
+      #faqs-anchor::before {
+        content: '';
+        display: block;
+        height: 20px;
+        margin-top: -20px;
+      } */
+    
 }
 
 
