--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Navbar from "@components/navbar/navbar.astro";
 import Reviews from "@components/reviews.astro";
 import Unitscommercial from "@components/units-commercial-equipment-same-day.astro";
 import Unitsappliances from "@components/units-appliances-same-day.astro";
-import Costanchor from "@components/price-list/components_dryer-repair-cost.astro";
+import CostanchorIndex from "@components/price-list/components_dryer-repair-cost-index.astro";
 import Contactbtn from "@components/contactbtn.astro";
 import "css/style-index.css";
 ---
@@ -31,13 +31,11 @@ import "css/style-index.css";
               src="/dryer-repair/dryer-repair-3.webp"
               alt="Same Day Dryer Repair"
             />
-
             <Contactbtn />
           </div>
 
           <div class="col-two">
-            <Costanchor />
-
+            <!-- <CostanchorIndex /> -->
             <p>
               Same Day Appliance Repair is a family owned business. We care for
               each of our customers. We can help with any appliance repair,
@@ -51,7 +49,8 @@ import "css/style-index.css";
               you the problem with your appliance. They will then give you a
               breakdown of the repair cost. If you decide to repair, the service
               fee is waived. We offer a 3 month warranty for your peace of mind.
-            </p><p>
+            </p>
+            <p>
               We repair all home and commercial appliances from all major
               brands. Our repairmen can fix your refrigerator, freezer, washer,
               dryer, stove, dishwasher, oven, cooktop, microwave, range hood,
@@ -66,7 +65,9 @@ import "css/style-index.css";
               Glendale, Malibu, Alhambra, Monterey Park, Thousand Oaks, West
               Hollywood, Universal City and San Marino.
             </p>
+            
           </div>
+
         </div>
         <!--test -->
 
@@ -77,7 +78,7 @@ import "css/style-index.css";
             id="full-commercial-machinery-nocolor">
             <div
               class="full-commercial-machinery-1920 first-element-without-indentation">
-              <div class="header-machinery">
+              <div class="header-machinery" >
                 <h2>
                   Same Day Home Appliance Repair, Installation, and
                   Maintenance...
@@ -94,9 +95,9 @@ import "css/style-index.css";
           </div>
 
           <!-- Grey коммерческая техника -->
-          <div class="full-commercial-machinery">
+          <div class="full-commercial-machinery "   id="parts-cost-anchor">
             <div class="full-commercial-machinery-1920">
-              <div class="header-machinery">
+              <div class="header-machinery"   >
                 <h2>
                   Same Day Commercial Appliance Repair, Maintenance, and
                   Installation
@@ -193,7 +194,8 @@ import "css/style-index.css";
               as on the day you bought it.
             </p>
 
-            <h2>
+            <div id="faqs-anchor">
+            <h2 >
               How to Schedule Same-Day Appointment For Appliance Repair in Los
               Angeles and Surrounding Areas and What to Expect
             </h2>
@@ -239,6 +241,7 @@ import "css/style-index.css";
               different, ranging from a basic issue like a malfunctioning outlet
               to more complex problems like a faulty compressor.
             </p>
+          </div>
           </div>
         </div>
       </div>
