--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,8 @@ import Unitscommercial from "@components/units-commercial-equipment-same-day.ast
 import Unitsappliances from "@components/units-appliances-same-day.astro";
 import CostanchorIndex from "@components/price-list/components_dryer-repair-cost-index.astro";
 import Contactbtn from "@components/contactbtn.astro";
+
+
 import "css/style-index.css";
 ---
 
@@ -35,7 +37,7 @@ import "css/style-index.css";
           </div>
 
           <div class="col-two">
-            <!-- <CostanchorIndex /> -->
+            <CostanchorIndex />
             <p>
               Same Day Appliance Repair is a family owned business. We care for
               each of our customers. We can help with any appliance repair,
@@ -73,9 +75,7 @@ import "css/style-index.css";
 
         <div class="category category-0">
           <!-- бытовая техника  -->
-          <div
-            class="full-commercial-machinery"
-            id="full-commercial-machinery-nocolor">
+          <div class="full-commercial-machinery" id="full-commercial-machinery-nocolor">
             <div
               class="full-commercial-machinery-1920 first-element-without-indentation">
               <div class="header-machinery" >
@@ -95,7 +95,7 @@ import "css/style-index.css";
           </div>
 
           <!-- Grey коммерческая техника -->
-          <div class="full-commercial-machinery "   id="parts-cost-anchor">
+          <div class="full-commercial-machinery" id="parts-cost-anchor">
             <div class="full-commercial-machinery-1920">
               <div class="header-machinery"   >
                 <h2>
@@ -111,24 +111,6 @@ import "css/style-index.css";
               <Unitscommercial />
             </div>
           </div>
-
-          <!-- Heating, ventilation, air conditioning -->
-          <!-- <div class="full-commercial-machinery"
-          id="full-commercial-machinery-nocolor">
-          <div class="full-commercial-machinery-1920">
-            <div class="header-machinery">
-              <h2>
-                Heating Ventilation And Air-Conditioning Service, Repair And
-                Installation
-              </h2>
-              <p>
-                Expert repair and installation of heating ventilation and AC by
-                our trained technicians
-              </p>
-            </div>
-            <Unitsheatventcondit />
-          </div>
-        </div> -->
 
           <Hero />
           <Features />
