--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -3,7 +3,6 @@ import Link from "./ui/link.astro";
 import { Icon } from "astro-icon";
 import Btn from "@components/btn.astro";
 
-
 import "@components/css-components/footer-cta.css";
 // import ReviewsFull from "@components/reviews-full.astro";
 ---
@@ -13,16 +12,18 @@ import "@components/css-components/footer-cta.css";
   <!-- скрипт отзывов грузит страницу на 17кб -->
   <div class="feedback" id="feedbackReviews">
     <!-- <ReviewsFull /> -->
-<h2>Same Day Appliance Repair Reviews - Real Reviews From Real Customers</h2>
+    <h2>
+      Same Day Appliance Repair Reviews - Real Reviews From Real Customers
+    </h2>
     <script
-    defer
-    src="https://static.elfsight.com/platform/platform.js"
-    data-use-service-core></script>
+      defer
+      src="https://static.elfsight.com/platform/platform.js"
+      data-use-service-core></script>
 
-  <div
-    class="elfsight-app-b69045ef-2bc6-4ac0-a4a3-5c17e1820cd5"
-    data-elfsight-app-lazy>
-  </div>
+    <div
+      class="elfsight-app-b69045ef-2bc6-4ac0-a4a3-5c17e1820cd5"
+      data-elfsight-app-lazy>
+    </div>
   </div>
   <!--End reviews -->
 
@@ -73,10 +74,9 @@ import "@components/css-components/footer-cta.css";
 
   <footer>
     <div class="full-footer">
-
       <div class="button-footer">
-
         <div class="a_button-footer">
+          <h3>Same Day Appliance Repair</h3>
           <h3>Don't Wait! Contact Us Today.</h3>
         </div>
 
@@ -91,17 +91,21 @@ import "@components/css-components/footer-cta.css";
         </div>
 
         <div class="c_button-footer">
-          <a target="_blank" href="https://samedayappliance.repair/sitemap.xml">Sitemap</a>
+          <a target="_blank" href="https://samedayappliance.repair/sitemap.xml"
+            >Sitemap</a
+          >
         </div>
-
       </div>
 
       <div class="address-footer">
-        <h3>Same Day Appliance Repair</h3>
-<h4 style="color:#ffffff;"><b>Los Angeles Location</b></h4>
         <div class="desc_address-footer">
+          <h4 style="color:#ffffff;"><b>Los Angeles Location</b></h4>
           <div class="content_address-footer">
-            <svg width="30px" height="30px" astro-icon="uil:map-marker" fill="fff"
+            <svg
+              width="30px"
+              height="30px"
+              astro-icon="uil:map-marker"
+              fill="fff"
               ><path
                 fill="fff"
                 d="M12 2a8 8 0 0 0-8 8c0 5.4 7.05 11.5 7.35 11.76a1 1 0 0 0 1.3 0C13 21.5 20 15.4 20 10a8 8 0 0 0-8-8zm0 17.65c-2.13-2-6-6.31-6-9.65a6 6 0 0 1 12 0c0 3.34-3.87 7.66-6 9.65zM12 6a4 4 0 1 0 4 4 4 4 0 0 0-4-4zm0 6a2 2 0 1 1 2-2 2 2 0 0 1-2 2z"
@@ -121,28 +125,50 @@ import "@components/css-components/footer-cta.css";
           </div>
 
           <div class="content_address-footer">
-            <svg width="30px" height="30px" astro-icon="uil:envelope" fill=" fff"
+            <svg
+              width="30px"
+              height="30px"
+              astro-icon="uil:envelope"
+              fill=" fff"
               ><path
                 fill="fff"
                 d="M19 4H5a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h14a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3zm-.41 2-5.88 5.88a1 1 0 0 1-1.42 0L5.41 6zM20 17a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V7.41l5.88 5.88a3 3 0 0 0 4.24 0L20 7.41z"
               ></path></svg
             >
-            <p>Email: info@<wbr/>samedayappliance.repair</p>
+            <p>Email: info@<wbr />samedayappliance<wbr />.repair</p>
+          </div>
+
+          <div class="content_address-footer">
+            <table>
+              <tbody>
+                <tr><td>Monday</td><td>8am - 8pm</td></tr>
+                <tr><td>Tuesday</td><td>8am - 8pm</td></tr>
+                <tr><td>Wednesday</td><td>8am - 8pm</td></tr>
+                <tr><td>Thursday</td><td>8am - 8pm</td></tr>
+                <tr><td>Friday</td><td>8am - 8pm</td></tr>
+                <tr><td>Saturday</td><td>8am - 8pm</td></tr>
+                <tr><td>Sunday</td><td>day off</td></tr>
+              </tbody>
+            </table>
           </div>
         </div>
+      </div>
 
-
-
-<h4 style="color:#ffffff;"><b>Pasadena, CA Location</b></h4>
+      <div class="address-footer">
         <div class="desc_address-footer">
+          <h4 style="color:#ffffff;"><b>Pasadena, CA Location</b></h4>
           <div class="content_address-footer">
-            <svg width="30px" height="30px" astro-icon="uil:map-marker" fill="fff"
+            <svg
+              width="30px"
+              height="30px"
+              astro-icon="uil:map-marker"
+              fill="fff"
               ><path
                 fill="fff"
                 d="M12 2a8 8 0 0 0-8 8c0 5.4 7.05 11.5 7.35 11.76a1 1 0 0 0 1.3 0C13 21.5 20 15.4 20 10a8 8 0 0 0-8-8zm0 17.65c-2.13-2-6-6.31-6-9.65a6 6 0 0 1 12 0c0 3.34-3.87 7.66-6 9.65zM12 6a4 4 0 1 0 4 4 4 4 0 0 0-4-4zm0 6a2 2 0 1 1 2-2 2 2 0 0 1-2 2z"
               ></path></svg
             >
-            <p>301 N Lake Ave Suit 600, <wbr/> Pasadena, CA, 91101</p>
+            <p>301 N Lake Ave Suit 600, <wbr /> Pasadena, CA, 91101</p>
           </div>
 
           <div class="content_address-footer">
@@ -156,51 +182,35 @@ import "@components/css-components/footer-cta.css";
           </div>
 
           <div class="content_address-footer">
-            <svg width="30px" height="30px" astro-icon="uil:envelope" fill=" fff"
+            <svg
+              width="30px"
+              height="30px"
+              astro-icon="uil:envelope"
+              fill=" fff"
               ><path
                 fill="fff"
                 d="M19 4H5a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h14a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3zm-.41 2-5.88 5.88a1 1 0 0 1-1.42 0L5.41 6zM20 17a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V7.41l5.88 5.88a3 3 0 0 0 4.24 0L20 7.41z"
               ></path></svg
             >
-            <p>Email: info.pasadena@<wbr/>samedayappliance.repair</p>
+            <p>Email: info.pasadena@<wbr />samedayappliance<wbr />.repair</p>
           </div>
+
+          <div class="content_address-footer">
+            <table>
+              <tbody>
+                <tr><td>Monday</td><td>8am - 8pm</td></tr>
+                <tr><td>Tuesday</td><td>8am - 8pm</td></tr>
+                <tr><td>Wednesday</td><td>8am - 8pm</td></tr>
+                <tr><td>Thursday</td><td>8am - 8pm</td></tr>
+                <tr><td>Friday</td><td>8am - 8pm</td></tr>
+                <tr><td>Saturday</td><td>8am - 8pm</td></tr>
+                <tr><td>Sunday</td><td>day off</td></tr>
+              </tbody>
+            </table>
+          </div>
+
+
         </div>
-
-
-        <!--Pasadena location-->
-        <!-- <br>
-        <h4 style="color:#ffffff;"><b>Pasadena, CA Location</b></h4>
-        <div class="desc_address-footer">
-          <div class="content_address-footer">
-            <svg width="30px" height="30px" astro-icon="uil:map-marker" fill="fff"
-              ><path
-                fill="fff"
-                d="M12 2a8 8 0 0 0-8 8c0 5.4 7.05 11.5 7.35 11.76a1 1 0 0 0 1.3 0C13 21.5 20 15.4 20 10a8 8 0 0 0-8-8zm0 17.65c-2.13-2-6-6.31-6-9.65a6 6 0 0 1 12 0c0 3.34-3.87 7.66-6 9.65zM12 6a4 4 0 1 0 4 4 4 4 0 0 0-4-4zm0 6a2 2 0 1 1 2-2 2 2 0 0 1-2 2z"
-              ></path></svg
-            >
-            <p>301 N Lake Ave Suit 600, Pasadena, CA, 91101</p>
-          </div>
-        <div class="content_address-footer">
-            <svg width="30px" height="30px" astro-icon="uil:phone" fill="fff"
-              ><path
-                fill="fff"
-                d="M19.44 13c-.22 0-.45-.07-.67-.12a9.44 9.44 0 0 1-1.31-.39 2 2 0 0 0-2.48 1l-.22.45a12.18 12.18 0 0 1-2.66-2 12.18 12.18 0 0 1-2-2.66l.42-.28a2 2 0 0 0 1-2.48 10.33 10.33 0 0 1-.39-1.31c-.05-.22-.09-.45-.12-.68a3 3 0 0 0-3-2.49h-3a3 3 0 0 0-3 3.41 19 19 0 0 0 16.52 16.46h.38a3 3 0 0 0 2-.76 3 3 0 0 0 1-2.25v-3a3 3 0 0 0-2.47-2.9zm.5 6a1 1 0 0 1-.34.75 1.05 1.05 0 0 1-.82.25A17 17 0 0 1 4.07 5.22a1.09 1.09 0 0 1 .25-.82 1 1 0 0 1 .75-.34h3a1 1 0 0 1 1 .79q.06.41.15.81a11.12 11.12 0 0 0 .46 1.55l-1.4.65a1 1 0 0 0-.49 1.33 14.49 14.49 0 0 0 7 7 1 1 0 0 0 .76 0 1 1 0 0 0 .57-.52l.62-1.4a13.69 13.69 0 0 0 1.58.46q.4.09.81.15a1 1 0 0 1 .79 1z"
-              ></path></svg
-            >
-            <p>Phone: (424) 325-0520</p>
-          </div>
-
-          <div class="content_address-footer">
-            <svg width="30px" height="30px" astro-icon="uil:envelope" fill=" fff"
-              ><path
-                fill="fff"
-                d="M19 4H5a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h14a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3zm-.41 2-5.88 5.88a1 1 0 0 1-1.42 0L5.41 6zM20 17a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V7.41l5.88 5.88a3 3 0 0 0 4.24 0L20 7.41z"
-              ></path></svg
-            >
-            <p>Email: info.pasadena@samedayappliance.repair</p>
-          </div>
-        </div> -->
-
       </div>
     </div>
   </footer>
