--- a/src/pages/areas/santa-monica.astro
+++ b/src/pages/areas/santa-monica.astro
@@ -7,6 +7,9 @@ import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
 import Reviews from "@components/reviews.astro";
+import Contactbtn from "@components/contactbtn.astro";
+import Unitsappliances from "@components/units-appliances-santa-monica.astro";
+import Unitscommercial from "@components/units-commercial-equipment-santa-monica.astro";
 
 import "css/service-areas/style-service-areas.css";
 ---
@@ -15,32 +18,66 @@ import "css/service-areas/style-service-areas.css";
 <Reviews />
 <Layout title="Same Day Appliance Repair Santa Monica - (424) 325-0520">
   <Container>
-      <h1>Same Day Appliance Repair Santa Monica</h1>
-      <img
-        style="border-radius: 25px;"
-        class="responsiveimg"
-        width="600"
-        height="600"
-        alt="Same Day Apliance Repair Santa Monica"
-        src="/images/same-day-appliance-repair-experts.webp"
-      />
-      <p>Looking for appliance repair Santa Monica CA? You are just in the right place for the best repair services! You are to expericence our efficient and professional home appliance repair services based on the profound expertise of our knowledgeable technicians. We offer same day serice for Santa Monica residents.</p>
-      <p>We will handle all your commercial or home appliances repair needs, maintenance and installation whether it is a dryer, washer, dishwasher, cooktop, stove, oven, refrigerator, freezer, range hood, microwave, fireplace, barbecue grill, ice machine, fryer, wine cooler, and wine cellar, walk in cooler, or washing machine</p>
-      <p>Our licensed and insured appliance repair company is a family owned business proud of high quality service and customers satistaction. Our sertified professional appliance repair technicians will diagnose and fix your appliance in no time, saving you the major inconvenience of a broken unit and providing the best appliance repair services in Santa Monica. We also provide three months warranty for our service. Do you need an appliance repair today? Give us a call! We schedule same day appointments!</p>
+    <div class="full-page">
+
+        <div class="page-header">
+
+            <span class="animate-charcter">
+                <h1>Same Day Appliance Repair Santa Monica</h1>
+            </span>
+
+        <div class="header-a">
+            <img
+            width="600"
+            height="600"
+            alt="Same Day Apliance Repair Santa Monica"
+            src="/images/same-day-appliance-repair-experts.webp"
+            />
+            <Contactbtn />
+        </div>
+
+        <div class="header-b">
+            <p>Looking for appliance repair Santa Monica CA? You are just in the right place for the best repair services! You are to expericence our efficient and professional home appliance repair services based on the profound expertise of our knowledgeable technicians. We offer same day serice for Santa Monica residents.</p>
+            <p>We will handle all your commercial or home appliances repair needs, maintenance and installation whether it is a dryer, washer, dishwasher, cooktop, stove, oven, refrigerator, freezer, range hood, microwave, fireplace, barbecue grill, ice machine, fryer, wine cooler, and wine cellar, walk in cooler, or washing machine</p>
+            <p>Our licensed and insured appliance repair company is a family owned business proud of high quality service and customers satistaction. Our sertified professional appliance repair technicians will diagnose and fix your appliance in no time, saving you the major inconvenience of a broken unit and providing the best appliance repair services in Santa Monica. We also provide three months warranty for our service. Do you need an appliance repair today? Give us a call! We schedule same day appointments!</p>
+        </div>
+
+      </div>
+
+
+
+
       <p style="text-align: inherit"></p>
       <h2>Trusted Santa Monica Appliance Repair</h2>
       <p style="text-align: inherit">Our family owned business serving Santa Monica community, CA, is specialised in maintenace and repair of home and commercial appliances of all major brands. Our technicians undergo extensive training and carry specialized tools to diagnose and fix any issue properly. Every technician at our company goes through a background check before working and know how the good job must be done. You can easily schedule your appointment: just give us a call or book a first visit online on our website.</p>
       <p></p>
+
+
+
+
       <h2>
           <strong>Home Appliance Repair Santa Monica CA</strong>
       </h2>
       <p style="text-align: inherit">Home appliance repair Santa Monica, CA, includes kitchen appliance repairs (refrigerator, freezer, dishwasher, oven, microwave, range hood, cooktop, ice maker etc.), laundry room appliance repair, fireplace repair, and barbecue grill repair. No matter the unit call us to schedule your Santa Monica appliance repair today!</p>
+      <Unitsappliances />
+
+
+
+
+
       <h2>
           <strong>Commercial Appliances Repair Santa Monica CA</strong>
       </h2>
       <p style="text-align: inherit">Commercial appliance repair Santa Monica, CA, includes commercial kitchen appliance repair, commercial laundry room appliance repair, bar appliance repair, and showcase appliance repair. We also provide property management with enticing pricing. Every technician at Same Day Appliance Repair is interested in repairing your appliance and getting your bussines back on track. Call us to schedule your commercial appliance repair today!</p>
-      <p style="text-align: inherit"></p>
-      <h2 style="text-align: start">
+      <Unitscommercial />
+
+
+
+
+
+      
+
+      <h2 style="text-align: center">
           <strong>Home Kitchen Appliance Repair Santa Monica</strong>
       </h2>
       <p style="text-align: start">Home kitchen appliance repair Santa Monica is one of our best quality professional appliance repair services. We specialize in a wide range of home kitchen appliances repair, including refrigerator repair, refrigerator maintenance, ovens, stoves, dishwashers, microwaves, entire unit installation services and more. Our team of skilled technicians is trained to handle various home appliances brands and models. With our commitment to same day service and customer satisfaction, you can trust us to restore your kitchen to full functionality without delay. Whether it's a minor fix or a major repair, we're here to provide high-quality service on enticing terms.</p>
@@ -79,7 +116,7 @@ import "css/service-areas/style-service-areas.css";
           <strong>Range Hood Repair Santa Monica CA</strong>
       </h3>
       <p style="text-align: start">Are you looking for range hood repair Santa Monica CA? We expertly handle range hood repairs, installation, and maintenance. Our repairmen have a lot of experience in installing, cleaning, and fixing exhaust systems and their components, such as ducts, vents, and exterior caps. We fix under cabinet, wall mounted, island, and downdraft hoods. If your range hood has a broken fan, lights, control panel, or other problems, call us to schedule your same day appointment!</p>
-      <h2 style="text-align: start">
+      <h2 style="text-align: center">
           <strong>Home Laundry Room Appliance Repair Santa Monica</strong>
       </h2>
       <p style="text-align: start">Home laundry room appliance repair and installation services are the top priority of our business. Our team of highly skilled technicians is adept at diagnosing and fixing a wide range of laundry appliances, including washing machines, dryers, and combination units. We understand the importance of having fully functional laundry appliances, which is why we offer our prompt same day service to minimize any disruption to your daily routine. With a commitment to customer satisfaction, we ensure that each repair is carried out efficiently and effectively, using high-quality replacement parts and the latest techniques. For reliable and timely home laundry room appliance repairs in Santa Monica, trust Same Day Appliance Repair to get the job done right.</p>
@@ -95,11 +132,11 @@ import "css/service-areas/style-service-areas.css";
       <p style="text-align: start">Dryer repair Santa Monica CA is one of the most frequent searches among the residents. Overheating dryers in this area is a common issue. Also, dust builds up faster due to the frequent use. Accumulated dust can wear out the internal components and cause unwanted breakages. Every dryer repair at our company comes with free and professional dryer cleaning services to increase the longevity of your dryer and prevent potential fires. We also provide three months warranty for our services.</p>
       <p style="text-align: start">Our repairmen are able to diagnose and fix any simple or complex dryer issue. We handle complex thermal and mechanical systems with malfunctioning heating elements, thermostats, and motor assemblies. Call us if your dryer is not drying, makes unusual noises, or simply stopped working.</p>
       <p style="text-align: start">Dryer brands we fix in Santa Monica include popular names such as Samsung, LG, Whirlpool, and Frigidaire. Homeowners frequently call us to repair their General Electric (GE), Maytag, KitchenAid, and Amana. We also have tons of experience with high-end brands such as Miele, Bosch, and Electrolux. Other brands we service include Kenmore, Haier, Jenn-Air, and Speed Queen. Additionally, we cover Hotpoint, Dacor, Fisher &amp; Paykel, Magic Chef, Danby, Insignia, Avanti, RCA, Hisense, and Blomberg.</p>
-      <h2 style="text-align: start">
+      <h2 style="text-align: center">
           <strong>Fireplace Repair Santa Monica CA</strong>
       </h2>
       <p style="text-align: start">Fireplace repair Santa Monica CA is professionally handled by our technicians. Our repairmen can efficiently find gas leaks in your fireplace system and can also handle electric models. Proper ventilation is another major concern when it comes to fireplace repair. We ensure there is no health hazard to you and your family that your fireplace may present. If you have any issues with your gas, electric, or wood burning fireplace, make sure to call us today!</p>
-      <h2 style="text-align: start">
+      <h2 style="text-align: center">
           <strong>Barbecue Repair Santa Monica CA</strong>
       </h2>
       <p style="text-align: start">Barbecue repair Santa Monica, CA, is our forte! We fix gas grills, charcoal grills, electric grills, and pallet grills. Our repairmen know how to safely handle propane or natural gas tanks and high voltage. They can easily find and eliminate gas leaks. Having ignition, burner, or control panel problems, temperature regulation issues, or any other barbecue malfunctioning issue? Call us today! We schedule same day appointments for the residents of Santa Monica area.</p>
@@ -142,7 +179,7 @@ import "css/service-areas/style-service-areas.css";
       <h2>Wine Cellar Repair Santa Monica CA</h2>
       <p>Keeping your wine cellar at the right conditions is key to your wine collection, so wine cellar repair Santa Monica is just for you. Same Day Appliance Repair fixes humidity control issues, cooling problems and electrical issues. Our techs are experienced with WhisperKOOL, CellarPro, Wine Guardian, Breezaire and more. Contact us today to book your appointment and store your wine in perfect conditions.</p>
       <p></p>
-      
+    </div>
   </Container>
 </Layout>
 <Cta />
