--- a/src/pages/services/commercial-showcase-refrigerator-repair-los-angeles.astro
+++ b/src/pages/services/commercial-showcase-refrigerator-repair-los-angeles.astro
@@ -24,10 +24,9 @@ import "css/service/style_services.css";
         <div class="page-header-d-full">
           <div class="page-header-d">
             <h1>
-              <span class="animate-charcter"
-                >Commercial Showcase Refrigerator Repair Los Angeles and Nearby
-                Areas</span
-              >
+              <span class="animate-charcter">
+                Commercial Showcase Refrigerator Repair Los Angeles and Nearby Areas
+              </span>
             </h1>
           </div>
         </div>
