--- a/src/components/css-components/footer-cta.css
+++ b/src/components/css-components/footer-cta.css
@@ -127,7 +127,7 @@ footer {
 
 .address-footer {
     /* width: 100%; */
-    margin: 0 auto;
+    /* margin: 0 auto; */
     max-width: 600px;
 }
 
