--- a/src/css/service-areas/style-service-areas.css
+++ b/src/css/service-areas/style-service-areas.css
@@ -25,14 +25,35 @@ img {
     box-shadow: 3px 3px 5px 3px rgba(0, 0, 0, 0.25);
 }
 
+
+
 h2 {
+    width: 100%;
     text-align: center;
-    margin: 6% 0% 3% 0%;
-    /* text-decoration-line: underline; */
-    /* text-decoration-color: #abb1b687; */
-    /* text-decoration-thickness: 4px; */
+    margin: 0 auto;
+    padding: 4% 0% 2% 0%;
     font-size: clamp(24px, 5vw, 28px) !important;
-    text-shadow: 1px 1px 1.3px #8f9499;
+    text-shadow: 1px 1px 1.3px #7c7e80;
+    color: #131313;
+}
+
+h3 {
+    font-size: clamp(20px, 4vw, 22px) !important;
+    text-shadow: 0.7px 0.7px 1px #7c7e80;
+    color: #131313;
+}
+
+b {
+    color: #131313;
+}
+
+
+p {
+    margin: 0;
+    margin-bottom: 10px;
+    color: #262626;
+    font-weight: 400;
+    font-size: clamp(16px, 3vw, 18px);
 }
 
 
@@ -47,8 +68,6 @@ h2 {
     background-clip: border-box;
     background-size: 200% auto;
     color: #fff;
-    background-clip: text;
-    /* text-fill-color: transparent; */
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     animation: textclip 4s linear infinite;
@@ -56,28 +75,85 @@ h2 {
     font-size: clamp(35px, 8vw, 60px);
     line-height: clamp(56px, 8vh, 60px);
     font-weight: 900;
+    text-shadow: 2.3px 2.3px 3.7px rgb(21 21 21);
 }
 
 
-/* .reviews {
-  width: 100%;
-  max-width: 1920px;
-  margin: 0 auto;
-  padding: 0% 3% 0% 3%;
+
+
+.page-header {
+    display: block;
+    margin-top: 1%;
 }
 
-.reviews p {
-  margin: 0;
-} */
+.page-header h1 {
+    margin-bottom: 20px;
+}
+
+.header-a {
+    float: left;
+    margin: 0 20px 0px 0;
+    max-width: 500px;
+}
+
+
+@media (max-width:1024px) {
+
+    .page-header {
+        display: grid;
+    }
+
+    .header-a {
+        float: none;
+        margin: 0 0px 0px 0;
+        max-width: 100%;
+    }
+    
+    .header-a img {
+        margin: 0 auto;
+        margin-bottom: 10px;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .two-col-grid {
     margin-top: 3%;
 }
 
 .col-one img {
-    /* width: 500px; */
     max-width: 100%;
-    /* height: 500px; */
     height: auto;
     margin-bottom: 25px;
     box-shadow: 0px 3px 5px 2px rgb(0 0 0 / 25%), 0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 5px 14px 0px rgb(0 0 0 / 12%);
@@ -689,9 +765,9 @@ main {
         padding: 3% 1% 2% 1%;
     }
 
-        .full-commercial-machinery p {
-            margin: 0;
-        }
+    .full-commercial-machinery p {
+        margin: 0;
+    }
 
 }
 
