--- a/src/pages/areas/santa-monica.astro
+++ b/src/pages/areas/santa-monica.astro
@@ -76,11 +76,24 @@ import "css/service-areas/style-service-areas.css";
 
 
       
+      <div class="page-container">
 
+    <div class="header-container">
+
+    <div class="head-content-h">
       <h2 style="text-align: center">
           <strong>Home Kitchen Appliance Repair Santa Monica</strong>
       </h2>
+    </div>
+
+    <div class="head-content-f">
+        <img src="/public/dryer-repair/dryer-repair-1.webp" alt="SAME DAY APPLIANCE REPAIR SANTA MONICA" width="450px" height="450px">
+    </div>
+
+    </div>
+
       <p style="text-align: start">Home kitchen appliance repair Santa Monica is one of our best quality professional appliance repair services. We specialize in a wide range of home kitchen appliances repair, including refrigerator repair, refrigerator maintenance, ovens, stoves, dishwashers, microwaves, entire unit installation services and more. Our team of skilled technicians is trained to handle various home appliances brands and models. With our commitment to same day service and customer satisfaction, you can trust us to restore your kitchen to full functionality without delay. Whether it's a minor fix or a major repair, we're here to provide high-quality service on enticing terms.</p>
+
       <h3 style="text-align: start">
           <strong>Refrigerator Repair Santa Monica CA</strong>
       </h3>
@@ -116,9 +129,27 @@ import "css/service-areas/style-service-areas.css";
           <strong>Range Hood Repair Santa Monica CA</strong>
       </h3>
       <p style="text-align: start">Are you looking for range hood repair Santa Monica CA? We expertly handle range hood repairs, installation, and maintenance. Our repairmen have a lot of experience in installing, cleaning, and fixing exhaust systems and their components, such as ducts, vents, and exterior caps. We fix under cabinet, wall mounted, island, and downdraft hoods. If your range hood has a broken fan, lights, control panel, or other problems, call us to schedule your same day appointment!</p>
-      <h2 style="text-align: center">
-          <strong>Home Laundry Room Appliance Repair Santa Monica</strong>
-      </h2>
+    </div>
+
+
+
+
+
+    <div class="page-container">
+
+        <div class="header-container">
+    
+        <div class="head-content-h">
+            <h2 style="text-align: center">
+                <strong>Home Laundry Room Appliance Repair Santa Monica</strong>
+            </h2>
+        </div>
+    
+        <div class="head-content-f">
+            <img src="/public/dryer-repair/dryer-repair-2.webp" alt="SAME DAY APPLIANCE REPAIR SANTA MONICA" width="450px" height="450px">
+        </div>
+    
+        </div>
       <p style="text-align: start">Home laundry room appliance repair and installation services are the top priority of our business. Our team of highly skilled technicians is adept at diagnosing and fixing a wide range of laundry appliances, including washing machines, dryers, and combination units. We understand the importance of having fully functional laundry appliances, which is why we offer our prompt same day service to minimize any disruption to your daily routine. With a commitment to customer satisfaction, we ensure that each repair is carried out efficiently and effectively, using high-quality replacement parts and the latest techniques. For reliable and timely home laundry room appliance repairs in Santa Monica, trust Same Day Appliance Repair to get the job done right.</p>
       <h3 style="text-align: start">
           <strong>Washer Repair Santa Monica CA</strong>
@@ -132,16 +163,26 @@ import "css/service-areas/style-service-areas.css";
       <p style="text-align: start">Dryer repair Santa Monica CA is one of the most frequent searches among the residents. Overheating dryers in this area is a common issue. Also, dust builds up faster due to the frequent use. Accumulated dust can wear out the internal components and cause unwanted breakages. Every dryer repair at our company comes with free and professional dryer cleaning services to increase the longevity of your dryer and prevent potential fires. We also provide three months warranty for our services.</p>
       <p style="text-align: start">Our repairmen are able to diagnose and fix any simple or complex dryer issue. We handle complex thermal and mechanical systems with malfunctioning heating elements, thermostats, and motor assemblies. Call us if your dryer is not drying, makes unusual noises, or simply stopped working.</p>
       <p style="text-align: start">Dryer brands we fix in Santa Monica include popular names such as Samsung, LG, Whirlpool, and Frigidaire. Homeowners frequently call us to repair their General Electric (GE), Maytag, KitchenAid, and Amana. We also have tons of experience with high-end brands such as Miele, Bosch, and Electrolux. Other brands we service include Kenmore, Haier, Jenn-Air, and Speed Queen. Additionally, we cover Hotpoint, Dacor, Fisher &amp; Paykel, Magic Chef, Danby, Insignia, Avanti, RCA, Hisense, and Blomberg.</p>
-      <h2 style="text-align: center">
-          <strong>Fireplace Repair Santa Monica CA</strong>
-      </h2>
       <p style="text-align: start">Fireplace repair Santa Monica CA is professionally handled by our technicians. Our repairmen can efficiently find gas leaks in your fireplace system and can also handle electric models. Proper ventilation is another major concern when it comes to fireplace repair. We ensure there is no health hazard to you and your family that your fireplace may present. If you have any issues with your gas, electric, or wood burning fireplace, make sure to call us today!</p>
-      <h2 style="text-align: center">
-          <strong>Barbecue Repair Santa Monica CA</strong>
-      </h2>
       <p style="text-align: start">Barbecue repair Santa Monica, CA, is our forte! We fix gas grills, charcoal grills, electric grills, and pallet grills. Our repairmen know how to safely handle propane or natural gas tanks and high voltage. They can easily find and eliminate gas leaks. Having ignition, burner, or control panel problems, temperature regulation issues, or any other barbecue malfunctioning issue? Call us today! We schedule same day appointments for the residents of Santa Monica area.</p>
-      <p style="text-align: start"></p>
-      <h2>Commercial Appliance Repair Santa Monica CA</h2>
+    </div>
+
+
+    <div class="page-container">
+
+        <div class="header-container">
+    
+        <div class="head-content-h">
+            <h2 style="text-align: center">
+                <strong>Commercial Appliance Repair Santa Monica CA</strong>
+            </h2>
+        </div>
+    
+        <div class="head-content-f">
+            <img src="/public/dryer-repair/dryer-repair-4.webp" alt="SAME DAY APPLIANCE REPAIR SANTA MONICA" width="450px" height="450px">
+        </div>
+    
+        </div>
       <p style="text-align: start">At Same Day Appliance Repair we offer same day commercial appliance repair Santa Monica CA. Whether you need help with commercial refrigerators, freezers, ovens, stoves, dishwashers or washing machines we have technicians experienced in all makes and models. We know how important it is to keep your business up and running so we offer same day service to minimize downtime. From high end brands like Sub-Zero, Viking and Thermador to more common names like Whirlpool, LG and Frigidaire we have the expertise to get your commercial units running again fast and efficiently. You can count on us for reliable solutions and great service every time.</p>
       <h3></h3>
       <h3>Commercial Refrigerator Repair Santa Monica CA</h3>
