--- a/src/components/css-components/style-reviews-full.css
+++ b/src/components/css-components/style-reviews-full.css
@@ -121,7 +121,7 @@
 
 
 
-    
+
 
 
 .content-a {
@@ -339,6 +339,7 @@
   cursor: pointer;
   margin-top: 0;
   font-weight: 500;
+  text-shadow: none;
 }
 
 .sel_3d h3:hover,
