--- a/src/css/service-areas/style-service-areas.css
+++ b/src/css/service-areas/style-service-areas.css
@@ -25,6 +25,10 @@ img {
     box-shadow: 3px 3px 5px 3px rgba(0, 0, 0, 0.25);
 }
 
+h1 {
+    text-align: center;
+}
+
 
 
 h2 {
@@ -95,9 +99,6 @@ p {
     max-width: 500px;
 }
 
-
-
-
 .page-container {
     display: block;
 }
@@ -115,10 +116,11 @@ p {
 
 
 
-
-
-
 @media (max-width:1024px) {
+
+    h2 {
+        padding: 7% 0% 2% 0%;
+    }
 
     .page-header {
         display: grid;
@@ -129,10 +131,17 @@ p {
         margin: 0 0px 0px 0;
         max-width: 100%;
     }
-    
+
     .header-a img {
         margin: 0 auto;
         margin-bottom: 10px;
+    }
+
+    .head-content-f {
+        float: none;
+        margin: 10px 10px 20px 10px;
+        justify-content: center;
+        display: grid;
     }
 }
 
